# HelloWorldC

./: .config_tool  CMakeLists.txt  build.sh
inc/: CMakeLists.txt  beardog_app.h
src/: CMakeLists.txt  main.c  main.h
